<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bank"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="219dp"
        android:layout_height="59dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/Introtext"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="38dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcometext1"
        android:layout_width="241dp"
        android:layout_height="59dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="20dp"
        android:shadowColor="#000000"
        android:shadowDx="4.0"
        android:shadowDy="3.0"
        android:shadowRadius="1.0"
        android:text="@string/by_rafael_freire_kloecking"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/welcometext"
        app:layout_constraintStart_toStartOf="@+id/welcometext"
        app:layout_constraintTop_toBottomOf="@+id/welcometext"
        app:srcCompat="@mipmap/ic_launcher_money" />

</androidx.constraintlayout.widget.ConstraintLayout>